# goit-fullstack-py-homeworks

./: .gitignore  README.md  pyproject.toml
homework_assignments/1_design_patterns_solid/task-1/: factory_pattern.py  main.py
homework_assignments/1_design_patterns_solid/task-2/: main.py  solid.py
