[tool.poetry]
name = "homework_assignments"
version = "0.1.0"
description = "Homework assignments for the course Fullstack Web Development with Python"
authors = ["Lada <lada11lada@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
